# ai-chatbot

./: pyproject.toml  run.py
src/aichatbot/: __init__.py  app.py  config-default.yaml  config.py  intents.json  training.py
src/aichatbot/routes/: messenger.py
src/aichatbot/utils/: utils.py
tests/: test_ai_chatbot.py  test_aichatbot.py
