[tool.poetry]
name = "aichatbot"
version = "0.1.0"
description = ""
authors = ["Binh Le <binh.le@lexer.io>"]

[tool.poetry.dependencies]
python = ">=3.7,<3.10"
nltk = "^3.7"
wheel = "^0.37.1"
chatbotAI = "^0.3.1"
cdislogging = "^1.1.1"
fastapi = "^0.79.0"
httpx = "^0.23.0"
requests = "^2.28.1"
PyYAML = ">=5.1,<6.0"
gen3config = "^1.0.0"
uvicorn = "^0.18.2"
importlib-metadata = {version = "^1.7.0", python = "<3.10"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.plugins."aichatbot.modules"]
"aichatbot_messenger" = "aichatbot.routes.messenger"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
